styles/style.css
:root {
    --my-grey: #B2BEB5;
    --my-red: #C3263B;
    --my-brown: #683428;
    --my-yellow: #FECC23;
    --my-black: #2C292B;

}

body {
    margin: 0;
}

#content {
    /* background-image: linear-gradient(to right bottom, green, purple); */
    /* height: 100%; */
    width: 100%;
    height: auto;
    background-color: var(--my-grey);
    text-align: center;
}

nav{
    background-color: var(--my-brown);
    columns: var(--my-yellow);
    display: flex;
    justify-content: space-around;
    line-height: 3em;
    max-height: 7em;
}

nav a {
    margin: auto;
    text-align: center;
    height: 100%;
    text-decoration: none;
    padding: 2em;   
}

nav a:hover {
    color: var(--my-black);
    background-color: var(--my-red);
}

nav a:hover:visited {
    color: var(--my-black);
}

nav a:visited{
    color: var(--my-yellow);
}

#logo_link {
    padding: 5px;
    justify-self: center;
    align-self: center;
}

